# frapps

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: release.yml  rust-clippy.yml
apps/frapps/: Cargo.toml  project.json
apps/frapps/src/: config.rs  credentials.rs  display.rs  main.rs
libs/frapps-npm/: README.md  jest.config.ts  package.json  project.json  tsconfig.json
libs/frapps-npm/src/: index.ts  run.ts
libs/frapps-npm/src/lib/: frapps-npm.ts  installer.spec.ts  installer.ts  platform.ts
libs/frappslib/: Cargo.toml  project.json
libs/frappslib/src/: absences.rs  calendar.rs  config.rs  credentials.rs  error.rs  lib.rs  login.rs
