[package]
name = "frapps"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
frappslib = {path = "../../libs/frappslib"}
keyring = "1.2.0"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.12", default-features = false, features = ["cookies", "gzip", "deflate", "json", "rustls-tls"] }
rpassword = "7.1.0"
rprompt = "1.0.5"
tabled = "0.10.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
